--- a/src/components/UI/modal-container.css
+++ b/src/components/UI/modal-container.css
@@ -44,6 +44,12 @@
   align-self: flex-end;
 }
 
+.modal-title-button img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .modal-container p {
   font-size: 10px;
   font-weight: 400;
