--- a/src/components/UI/modal-container.css
+++ b/src/components/UI/modal-container.css
@@ -11,10 +11,11 @@
   align-items: center;
   background-color: #1a1717;
   border-radius: 50px 50px 0 0;
-  height: 130px;
+  height: 150px;
   padding-left: 40px;
   padding-right: 30px;
   gap: 20px;
+  transform-origin: bottom;
 }
 
 .modal-title {
