--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   padding-top: 54px;
-  padding-bottom: 150px;
+  padding-bottom: 180px;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -65,8 +65,6 @@
 }
 
 .task-btn {
-  width: 65px;
-  height: 22px;
   background-color: #f6f6f6;
   border-radius: 100px;
   color: black;
@@ -74,8 +72,7 @@
   font-weight: 400;
   border: none;
   text-align: center;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 7px 8px;
 }
 
 .active-btn {
