--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -88,8 +88,9 @@
 }
 
 .labels-container {
+  display: flex;
   width: 100%;
-  max-width: 304px;
+  max-width: 320px;
   display: flex;
   justify-content: space-around;
   padding: 0 10px;
@@ -100,6 +101,7 @@
   font-weight: 500;
   color: rgba(255, 255, 255, 0.85); /* чуть ярче для читаемости */
   margin: 4px 0 0;
+  width: 100%;
   flex: 1;
   text-align: center;
   line-height: 1.2;
