--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -92,8 +92,8 @@
   width: 100%;
   max-width: 320px;
   display: flex;
-  justify-content: space-around;
-  padding: 0 10px;
+  justify-content: space-evenly;
+  padding: 0;
 }
 
 .labels-container p {
