--- a/src/components/header.css
+++ b/src/components/header.css
@@ -30,15 +30,15 @@ div.time-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 46px;
-  height: 24px;
+  width: 100%;
+  height: 100%;
   background-color: #282828;
   box-shadow: inset 0 0 3px rgba(0,0,0,0.61);
   text-align: center;
   border-radius: 100px;
   font-size: 14px;
   font-weight: 500;
-  padding: 0;
+  padding: 3px 5px;
   margin: 0;
 }
 
