--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 133vh;
+  min-height: 100%;
   width: 100vw;
   width: 100%;
 }
