--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -24,11 +24,16 @@
   text-align: left;
   padding-left: 34px;
   margin: 0;
-  font-size: 28px;
   font-weight: 700;
   padding-top: 27px;
   padding-bottom: 16px;
   width: 100%; /* ✅ растягивается */
+}
+
+.task-title h1 {
+  font-size: 28px;
+  font-weight: 700;
+  margin: 0;
 }
 
 .tabs {
