--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -172,6 +172,10 @@
 }
 
 @media (max-width: 780px) {
+  .task-main {
+    align-items: unset;
+  }
+
   .task-title {
     align-self: flex-start;
     padding-left: 34px;
