--- a/src/layouts/exchange-page-layout/exchange-page.css
+++ b/src/layouts/exchange-page-layout/exchange-page.css
@@ -166,8 +166,6 @@ div.exchange img {
 }
 
 .button-row > button {
-  width: 67px;
-  height: 19px;
   border-radius: 100px;
   background-color: #282828;
   box-shadow: inset 0 0 3px rgba(0,0,0,0.61);
@@ -177,6 +175,7 @@ div.exchange img {
   font-weight: 500;
   text-align: center;
   cursor: pointer;
+  padding: 5px 8px;
 }
 
 .submit-btn {
